# python-project-lvl1

./: .codeclimate.yml  .travis.yml  Makefile  README.md  pyproject.toml
brain_games/: cli.py  games_logic.py  games_rules.py
brain_games/games/: calc.py  even.py  gcd.py  prime.py  progression.py
brain_games/scripts/: brain_calc.py  brain_even.py  brain_games.py  brain_gcd.py  brain_prime.py  brain_progression.py
