[tool.poetry]
name = "Ivanich-spb_brain_games"
packages = [
	{ include = "brain_games" },
	]
version = "0.5.2"
description = "Package consists of 5 CLI games"
authors = ["Ivanich <zvoox.ru@gmail.com>"]
repository = "https://github.com/Ivanich-spb/python-project-lvl1"
classifiers = [
	"Development Status :: 3 - Alpha",
	"Environment :: Console",
	"Intended Audience :: Education",
	"Programming Language :: Python :: 3",
	"Topic :: Education :: Testing"
	]

[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games:main"
brain-even = "brain_games.scripts.brain_even:main"
brain-calc = "brain_games.scripts.brain_calc:main"
brain-gcd = "brain_games.scripts.brain_gcd:main"
brain-progression = "brain_games.scripts.brain_progression:main"
brain-prime = "brain_games.scripts.brain_prime:main"

[tool.poetry.dependencies]
python = "^3.6"
prompt = "^0.4.1"
ansi = "^0.1.5"


[tool.poetry.dev-dependencies]
flake8 = "^3.7.9"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
